<resources>
    <string name="app_name">WordsDiary</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_study">学习</string>
    <string name="title_review">复习</string>
    <string name="title_collect">收藏</string>
    <string name="title_dashboard">仪表盘</string>
    <string name="btn_startStudy">开始背词</string>
    <string name="当前词书">当前词书：</string>
    <string name="总计单词">总计单词：</string>
    <string name="已学单词">已学单词：</string>
    <string name="学习">Study</string>
    <string name="复习">Review</string>
    <string name="今日待学">今日待学：</string>
    <string name="待复习">待复习：</string>
    <string name="词书图片">词书图片</string>
    <string name="defaultData">-</string>
    <string name="back">back</string>
    <string name="美式发音">美式发音:</string>
    <string name="英式发音">英式发音:</string>
    <string name="中文释义">中文释义:</string>
</resources>