<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_study">

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.zanchen.develop.wordsdiary.fragment.study.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_study" >
        <action
            android:id="@+id/action_navigation_study_to_studyInfoFragment"
            app:destination="@id/studyInfoFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_study_to_dictionaryFragment"
            app:destination="@id/dictionaryFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/dictionaryFragment"
        android:name="com.zanchen.develop.wordsdiary.fragment.dictionary.DictionaryFragment"
        android:label="fragment_dictionary"
        tools:layout="@layout/fragment_dictionary" >
        <argument
            android:name="wordname"
            app:argType="string"
            android:defaultValue="apple" />
    </fragment>


    <fragment
        android:id="@+id/studyInfoFragment"
        android:name="com.zanchen.develop.wordsdiary.fragment.study.studyInfo.StudyInfoFragment"
        android:label="fragment_study_info"
        tools:layout="@layout/fragment_study_info">
        <argument
            android:name="testString"
            app:argType="string"
            android:defaultValue='"empty"' />
        <action
            android:id="@+id/action_studyInfoFragment_to_bookInfoFragment"
            app:destination="@id/bookInfoFragment" />
        <action
            android:id="@+id/action_studyInfoFragment_to_wordInfoFragment"
            app:destination="@id/wordInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookInfoFragment"
        android:name="com.zanchen.develop.wordsdiary.fragment.study.bookInfo.BookInfoFragment"
        android:label="fragment_book_info"
        tools:layout="@layout/fragment_book_info">
        <argument
            android:name="testString"
            app:argType="string"
            android:defaultValue='"empty"' />
    </fragment>

    <fragment
        android:id="@+id/wordInfoFragment"
        android:name="com.zanchen.develop.wordsdiary.fragment.study.wordInfo.WordInfoFragment"
        android:label="fragment_word_info"
        tools:layout="@layout/fragment_word_info">
        <argument
            android:name="testString"
            app:argType="string"
            android:defaultValue='"empty"' />
    </fragment>

    <fragment
        android:id="@+id/navigation_review"
        android:name="com.zanchen.develop.wordsdiary.fragment.review.ReviewFragment"
        android:label="@string/title_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/navigation_collect"
        android:name="com.zanchen.develop.wordsdiary.fragment.collect.CollectFragment"
        android:label="@string/title_collect"
        tools:layout="@layout/fragment_collect" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zanchen.develop.wordsdiary.fragment.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

</navigation>