<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_wordinfo_morning_alpha"
    tools:context=".fragment.study.studyInfo.StudyInfoFragment">

    <LinearLayout
        android:id="@+id/layout_studyInfoFragment_topBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!--返回键-->
        <ImageButton
            android:id="@+id/imageBtn_dictionaryFragment_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_exit"
            android:contentDescription="@string/back" />

    </LinearLayout>



    <!--词书卡片-->
    <LinearLayout
        android:id="@+id/layout_studyInfoFragment_book_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_studyInfoFragment_topBar"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageView
            android:id="@+id/imageView_studyInfoFragment_currentBook"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_book_cet4"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <!--当前词书名-->
            <LinearLayout
                android:id="@+id/layout_studyInfoFragment_currentBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <!--当前词书名-->
                <TextView
                    android:id="@+id/text_studyInfoFragment_currentBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/defaultData"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
            <!--总计单词数-->
            <LinearLayout
                android:id="@+id/layout_studyInfoFragment_total_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <!--总计单词: -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/总计单词"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    />
                <!--总计单词数-->
                <TextView
                    android:id="@+id/text_studyInfoFragment_totalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/defaultData"
                    android:textSize="12sp" />
            </LinearLayout>
            <!--已学单词数-->
            <LinearLayout
                android:id="@+id/layout_studyInfoFragment_studyAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/已学单词"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    />
                <!--每日单词翻译-->
                <TextView
                    android:id="@+id/text_studyInfoFragment_studyAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/defaultData"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--每日信息-->
    <LinearLayout
        android:id="@+id/layout_studyInfoFragment_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:baselineAligned="false">

        <!--待学习-->
        <LinearLayout
            android:id="@+id/layout_studyInfoFragment_study"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/btn_corner_studyinfo">

            <!--今日未学-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/学习"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--今日未学单词-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAlignment="center"
                    android:text="@string/今日待学"
                    android:textSize="14sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/defaultData"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"/>

        <!--待复习-->
        <LinearLayout
            android:id="@+id/layout_studyInfoFragment_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/btn_corner_studyinfo"
            >

            <!--待复习-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                android:fontFamily="@font/poppins"
                android:text="@string/复习"
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--待复习单词-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAlignment="center"
                    android:text="@string/待复习"
                    android:textSize="14sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/defaultData"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>